--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.16",
+    "@apollo/link-error": "^2.0.0-beta.3",
+    "@apollo/react-ssr": "^4.0.0",
+    "apollo-upload-client": "^14.1.3",
+    "graphql": "^15.5.0",
     "next": "10.1.3",
     "next-google-fonts": "^2.2.0",
+    "next-with-apollo": "^5.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "styled-components": "^5.2.3"
